Issue 5333 Added option to remove user binding with authentication provider

--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Customer/Edit.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Customer/Edit.cshtml
@@ -96,6 +96,10 @@
 {
     <nop-delete-confirmation asp-model-id="@Model.Id" asp-action="GdprDelete" asp-button-id="customer-gdpr-delete" />
 }
+@if (!string.IsNullOrEmpty(Model.MultiFactorAuthenticationProvider))
+{
+    <nop-delete-confirmation asp-model-id="@Model.Id" asp-action="RemoveBindMFA" asp-button-id="mfa-bind-delete" />
+}
 
 @*send email form*@
 <div id="sendemail-window" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="sendemail-window-title">
